[package]
name = "job-factory"
version = "0.1.0"
authors = ["Dharitri <contact@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.dharitri-sc-scenario]
version = "0.12.0"
[dependencies.dharitri-sc]
version = "0.12.0"

[dependencies.job]
path = "../job"
