[package]
name = "job-wasm"
version = "0.0.0"
edition = "2018"
publish = false
authors = ["Dharitri <contact@dharitri.com>"]

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["."]

[dev-dependencies]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.job]
path = ".."

[dependencies.dharitri-sc-wasm-adapter]
version = "0.12.0"
